small fixes in alignment

--- a/src/components/about_us/about-us.scss
+++ b/src/components/about_us/about-us.scss
@@ -63,7 +63,7 @@
 
   .slick-list {
     @include media-breakpoint-up(lg) {
-      padding: 0 0 0 27% !important;
+      padding: 0 0 0 10% !important;
     }
   }
   .slick-slide {
@@ -155,6 +155,10 @@
   }
 
   .gallery-item {
+    padding: 0.5rem 0;
+    @include media-breakpoint-up(lg) {
+      padding: 0;
+    }
     .gallery-img-wrapper {
       background-color: $white;
       border-radius: 0.5rem;
